--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/preset-react": "^7.16.7",
+    "axios": "^0.26.0",
     "babel-loader": "^8.2.3",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
